@@ -1,6 +1,10 @@
 New in spot 2.7.1.dev  (not yet released)
 
-  Nothing yet.
+  Python:
+
+  - Improved support for explicit Kripke structure.  It is now
+    possible to iterate over a kripke_graph object in a way similar to
+    twa_graph.
 
 New in spot 2.7.1 (2019-02-14)
 
